ombi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
spec:
  replicas: 1
  serviceName: ombi
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 569
      containers:
       - name: ombi
         image: itscontained/ombi:4.0.471
         ports:
           - containerPort: 5000
             protocol: TCP
         volumeMounts:
           - mountPath: /var/lib/ombi
             name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ombi
