ombi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ombi
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: ombi
