ombi/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: ombi
  name: ombi
spec:
  rules:
    - host: request.cajun.pro
      http:
        paths:
          - backend:
              serviceName: ombi
              servicePort: 5000
            path: /
  tls:
    - hosts:
        - request.cajun.pro
      secretName: request-cajun-pro
